2005-12-16  Carl Worth  <cworth@cworth.org>

	* configure.in: Add a new option --enable-test-surfaces.

	* src/Makefile.am:
	* src/test-fallback-surface.h:	
	* src/test-fallback-surface.c: (_test_fallback_surface_create),
	(_test_fallback_surface_create_for_data),
	(_test_fallback_surface_create_similar),
	(_test_fallback_surface_finish),
	(_test_fallback_surface_acquire_source_image),
	(_test_fallback_surface_release_source_image),
	(_test_fallback_surface_acquire_dest_image),
	(_test_fallback_surface_release_dest_image),
	(_test_fallback_surface_get_extents): New surface backend for
	testing only. It has as many NULL backend entries as possible.

	* test/Makefile.am:
	* test/cairo-test.c: (create_test_fallback_surface),
	(cleanup_test_fallback), (cairo_test_expecting): Add support to
	test the new test_fallback backend.

2005-12-16  Carl Worth  <cworth@cworth.org>

	* src/cairoint.h: Don't export cairo_image_surface_set_clip_region.
	
	* src/cairo-image-surface.c: (_cairo_image_surface_finish),
	(_cairo_image_surface_set_clip_region),
	(_cairo_image_surface_get_extents): Eliminate some unnecessary
	_cairo_image_abstract_surface variations of backend function.
	
	* src/cairo-font-subset.c: Remove errant include of cairo-pdf.h.

2005-12-16  Christian Biesinger  <cbiesinger@web.de>

	reviewed by: cworth

	* CODING_STYLE:
	* src/cairo-atsui-font.c: (_cairo_atsui_font_old_show_glyphs):
	* src/cairo-clip-private.h:
	* src/cairo-clip.c: (_cairo_clip_combine_to_surface):
	* src/cairo-ft-font.c: (_cairo_ft_show_glyphs):
	* src/cairo-gstate-private.h:
	* src/cairo-gstate.c: (_cairo_gstate_init),
	(_cairo_gstate_init_copy), (_cairo_gstate_set_operator),
	(_cairo_gstate_get_operator), (_cairo_gstate_paint),
	(_cairo_operator_bounded_by_mask),
	(_cairo_operator_bounded_by_source),
	(_cairo_gstate_clip_and_composite_with_mask),
	(_cairo_gstate_clip_and_composite_combine),
	(_cairo_gstate_clip_and_composite), (_cairo_gstate_mask),